Add build and publish scripts; update activation events in package.json

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "Other"
   ],
   "activationEvents": [
-    "*"
+    "onCommand:wsl-reveal-explorer.revealInExplorer",
+    "onCommand:wsl-reveal-explorer.test"
   ],
   "main": "./extension.js",
   "contributes": {
