Update package.json to version 1.0.1 and add activation event for onStartupFinished

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wsl-reveal-explorer",
   "displayName": "WSL Reveal in File Explorer",
   "description": "Seamlessly open Windows File Explorer from WSL with zero configuration. Right-click any file or folder to reveal it in Windows Explorer.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "icon": "assets/imgs/logo.jpg",
   "author": {
     "name": "Feras Abdalrahman",
@@ -33,6 +33,9 @@
   },
   "categories": [
     "Other"
+  ],
+  "activationEvents": [
+    "onStartupFinished"
   ],
   "main": "./extension.js",
   "contributes": {
